--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
 		}
 
 		.sua-div {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			width: 100dvw;
-			height: 100dvh;
+			position: relative;
+			width: 100vw;
+			height: 100vh;
+			text-align: center;
 		}
 
 		.sua-div img {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
 			max-width: 98%;
 			max-height: 98%;
 			object-fit: contain;
-			/* background-color: #1E22A8; */
-			/* Opcional: cor de fundo para preencher os espaços */
+			/* Pode manter, se quiser, mas pode remover para TVs mais antigas */
 		}
 
 		.text {
@@ -86,32 +88,38 @@
 
 		#barra-contagem {
 			position: fixed;
-			/* Fixa no topo da tela */
 			top: 0;
 			left: 0;
 			width: 100%;
 			height: 8px;
-			/* Altura da barra */
 			background-color: rgba(0, 0, 0, 0.1);
-			/* Fundo semi-transparente */
 			z-index: 9999;
-			/* Fica por cima de tudo */
 			overflow: hidden;
 		}
 
 		#barra {
 			height: 100%;
 			width: 100%;
-			/* Começa cheia */
 			background-color: #4caf50;
-			transition: width 0.1s linear;
+		}
+
+		#spanRelogio {
+			position: fixed;
+			bottom: 10px;
+			left: 10px;
+			padding: 8px 12px;
+			background-color: rgba(0, 0, 0, 0.7);
+			color: white;
+			font-size: 14px;
+			border-radius: 4px;
+			z-index: 9999;
 		}
 	</style>
 </head>
 
 <body>
 
-	<!-- <span id="spanRelogio"></span> -->
+	<span id="spanRelogio"></span>
 	<div class="sua-div">
 		<img class="mySlides ajuste" src="./src/1.png" alt="">
 		<img class="mySlides ajuste" src="./src/2.png" alt="">
@@ -158,24 +166,25 @@
 
 	<script>
 		function iniciarContagem(duracao) {
-			// const duracao = 5000; // 5 segundos
-			const barra = document.getElementById("barra");
-			const inicio = Date.now();
+			var barra = document.getElementById("barra");
+			var tempoRestante = duracao;
+			var intervalo = 50; // Atualizar a cada 50ms (ajustável)
+			var larguraInicial = 100;
 
-			function atualizar() {
-				const agora = Date.now();
-				const tempoPassado = agora - inicio;
-				const progresso = Math.max(0, 1 - tempoPassado / duracao);
-				barra.style.width = (progresso * 100) + "%";
+			clearInterval(barra.timer); // Se houver animação anterior, para ela
 
-				if (tempoPassado < duracao) {
-					requestAnimationFrame(atualizar);
-				} else {
+			barra.style.width = "100%";
+
+			barra.timer = setInterval(function () {
+				tempoRestante -= intervalo;
+				var progresso = Math.max(0, tempoRestante / duracao);
+				barra.style.width = (progresso * larguraInicial) + "%";
+
+				if (tempoRestante <= 0) {
+					clearInterval(barra.timer);
 					barra.style.width = "0%";
 				}
-			}
-
-			atualizar();
+			}, intervalo);
 		}
 	</script>
 
