--- a/index.html
+++ b/index.html
@@ -25,18 +25,22 @@
 			display: none;
 		}
 
-		.sua-div {
+		#galeria {
 			position: relative;
 			width: 100vw;
 			height: 100vh;
 			text-align: center;
 		}
 
-		.sua-div img {
+		#galeria img,
+		iframe {
 			position: absolute;
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
+			border: none;
+			width: 100%;
+			height: 100%;
 			max-width: 98%;
 			max-height: 98%;
 			object-fit: contain;
@@ -78,12 +82,12 @@
 		}
 
 
-		/* .ajuste {
-			margin-top: -5;
+		.ajuste {
+			margin-top: -50;
 			margin-left: -8px;
 			width: 101% !important;
 			height: 100dvh !important;
-		} */
+		}
 
 
 		#barra-contagem {
@@ -108,8 +112,8 @@
 			bottom: 10px;
 			left: 10px;
 			padding: 8px 12px;
-			background-color: rgba(0, 0, 0, 0.7);
-			color: white;
+			background-color: rgba(0, 0, 0, 0.4);
+			color: rgba(255, 255, 255, 0.4);
 			font-size: 14px;
 			border-radius: 4px;
 			z-index: 9999;
@@ -120,10 +124,12 @@
 <body>
 
 	<span id="spanRelogio"></span>
-	<div class="sua-div">
-		<img class="mySlides ajuste" src="./src/1.png" alt="">
-		<img class="mySlides ajuste" src="./src/2.png" alt="">
-		<img class="mySlides ajuste" src="./src/3.png" alt="">
+	<div id="galeria">
+		<span>Erro, tentanto novamente em 5 segundos...</span>
+
+		<!-- <img class="mySlides ajuste" alt=""> -->
+		<!-- <img class="mySlides ajuste" src="./src/2.png" alt="">
+		<img class="mySlides ajuste" src="./src/3.png" alt=""> -->
 	</div>
 
 	<div id="barra-contagem">
@@ -189,25 +195,92 @@
 	</script>
 
 	<script>
-		var slideIndex = 0;
+		async function LoadImg(params) {
+			// https://drive.google.com/file/d/1tG9DNU-exAHVYaxfVlRnkq2FUxWwkhb0/view?usp=drive_link
+			const urlJSON = "https://intcicopal.github.io/diadia/diadia.json";
+			// const urlJSON = "https://drive.google.com/file/d/1tG9DNU-exAHVYaxfVlRnkq2FUxWwkhb0/view?usp=drive_link";
+
+			await fetch(urlJSON)
+				.then(response => response.json())
+				.then(data => {
+					const galeria = document.getElementById("galeria");
+					var indexTT = 0;
+
+					// Processar imagens
+					if (data.imagens && Array.isArray(data.imagens)) {
+						data.imagens.forEach(function (item, index) {
+							const img = document.createElement('img');
+							img.className = "mySlides";
+							img.src = `https://intcicopal.github.io/diadia/src/${item.nome}`;
+							galeria.appendChild(img);
+							// console.log(`Imagem ${indexTT += index}:`, item.nome, "Tempo:", item.tempo);
+
+							tempopp[indexTT++] = item.tempo * 1000;
+						});
+					}
+
+					// Processar links
+					if (data.links && Array.isArray(data.links)) {
+						data.links.forEach(function (item, index) {
+
+							const iframe = document.createElement('iframe');
+							iframe.className = "mySlides ajuste";
+							iframe.allowFullScreen = "true"
+							iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false&filterPaneEnabled=false&actionBarEnabled=false`;
+							galeria.appendChild(iframe);
+							// console.log(`Link ${indexTT += index}:`, item.url, "Tempo:", item.tempo);
+
+							tempopp[indexTT++] = item.tempo * 1000;
+						});
+					}
+
+					// itens.forEach(function (item, index) {
+					// 	if (item.tipo === "imagem") {
+					// 		const img = document.createElement('img');
+					// 		img.className = "mySlides ajuste"
+					// 		img.src = `https://intcicopal.github.io/diadia/src/${item.nome}`
+					// 		galeria.appendChild(img);
+					// 	}
+
+					// 	if (item.tipo === "link") {
+					// 		const iframe = document.createElement('iframe');
+					// 		iframe.src = `https://app.powerbi.com/reportEmbed?reportId=ef3f9bae-1219-471b-9507-61b4a708a6b3&autoAuth=true&ctid=7237e24f-5c57-4444-a72b-80ca44c58630&pageName=9de9b7dc93dbded12a1b`;
+					// 		galeria.appendChild(iframe);
+					// 	}
+
+
+					// 	tempopp[index] = item.tempo * 1000;
+
+					// 	// Exemplo: tipos futuros como texto, PDF, etc...
+					// });
+					showSlides();
+				})
+				.catch(error => {
+					console.error('Erro ao carregar JSON:', error);
+					console.log('Tentando novamente em 5 segundos...');
+					setTimeout(() => {
+						location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+					}, 5000);
+				});
+		}
+
+	</script>
+
+	<script>
+
+		LoadImg()
 
 		var tempopp = new Array;
-		tempopp[0] = 10 * 1000;
-		tempopp[1] = 10 * 1000;
-		tempopp[2] = 5 * 1000;
 
-		showSlides();
+		var slideIndex = 0;
+
 		relogio();
 
 		function showSlides() {
 			var i;
 			var slides = document.getElementsByClassName("mySlides");
 
-			for (i = 0; i < slides.length; i++) {
-				slides[i].style.display = "none";
-			}
-
-			if (slideIndex >= slides.length) {
+			for (i = 0; i < slides.length; i++) { slides[i].style.display = "none"; } if (slideIndex >= slides.length) {
 				slideIndex = 0;
 			}
 
