--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 	</div>
 
 	<script>
-		window.onblur = function () {
-			window.onfocus = function () {
-				location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
-			}
-		};
+		// window.onblur = function () {
+		// 	window.onfocus = function () {
+		// 		location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+		// 	}
+		// };
 
 		var tempopp = [];
 		var slideIndex = 0;
@@ -129,6 +129,7 @@
 				} else {
 					document.getElementById('spanRelogio').innerHTML = "00:00";
 					location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+					// location.reload();
 				}
 			}
 
@@ -192,7 +193,8 @@
 							const iframe = document.createElement('iframe');
 							iframe.className = "mySlides";
 							iframe.allowFullscreen = true;
-							iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false&filterPaneEnabled=false&actionBarEnabled=false`;
+							// iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false&filterPaneEnabled=false&actionBarEnabled=false`;
+							iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false`;
 							galeria.appendChild(iframe);
 							tempopp[indexTT++] = item.tempo * 1000;
 							slidesExist = true;
@@ -209,7 +211,8 @@
 					console.error('Erro ao carregar JSON:', error);
 					document.getElementById("status").innerHTML = "Erro ao carregar dados. Tentando novamente...";
 					setTimeout(() => {
-						location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+						// location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+						location.reload();
 					}, 5000);
 				});
 		}
