--- a/index.html
+++ b/index.html
@@ -5,30 +5,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dia Dia é meu</title>
-	<link rel="shortcut icon"
-		href="https://static.wixstatic.com/media/7bddc8_b0a20b809f8647898991ef927d5203d8%7Emv2.png/v1/fill/w_192%2Ch_192%2Clg_1%2Cusm_0.66_1.00_0.01/7bddc8_b0a20b809f8647898991ef927d5203d8%7Emv2.png">
 	<style>
 		* {
 			box-sizing: border-box;
 			margin: 0;
-			padding: 0;
+			padding: 0
 		}
 
 		body {
 			font-family: Verdana, sans-serif;
 			overflow: hidden;
-			background-color: #1E22A8;
-		}
-
-		.mySlides {
-			display: none;
+			background: #1E22A8
 		}
 
 		#galeria {
 			position: relative;
 			width: 100vw;
 			height: 100vh;
-			text-align: center;
+			text-align: center
 		}
 
 		#galeria img,
@@ -51,15 +45,15 @@
 			left: 0;
 			width: 100%;
 			height: 8px;
-			background-color: rgba(0, 0, 0, 0.1);
+			background: rgba(0, 0, 0, .1);
 			z-index: 9999;
-			overflow: hidden;
+			overflow: hidden
 		}
 
 		#barra {
 			height: 100%;
-			width: 100%;
-			background-color: #4caf50;
+			width: 0;
+			background: #4caf50
 		}
 
 		#spanRelogio {
@@ -67,11 +61,11 @@
 			bottom: 10px;
 			left: 10px;
 			padding: 8px 12px;
-			background-color: rgba(0, 0, 0, 0.6);
+			background: rgba(0, 0, 0, .6);
 			color: white;
 			font-size: 14px;
 			border-radius: 4px;
-			z-index: 9999;
+			z-index: 99999
 		}
 
 		#status {
@@ -81,8 +75,18 @@
 			text-align: center;
 			color: white;
 			font-size: 16px;
-			background: rgba(0, 0, 0, 0.6);
-			padding: 10px;
+			background: rgba(0, 0, 0, .6);
+			padding: 10px
+		}
+
+		@keyframes barraAnim {
+			from {
+				width: 0%;
+			}
+
+			to {
+				width: 100%;
+			}
 		}
 	</style>
 </head>
@@ -98,152 +102,79 @@
 	</div>
 
 	<script>
-		// window.onblur = function () {
-		// 	window.onfocus = function () {
-		// 		location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
-		// 	}
-		// };
+		const urlJSON = "https://intcicopal.github.io/diadia/diadia.json";
+		const galeria = document.getElementById("galeria");
+		const barra = document.getElementById("barra");
+		let slides = [], tempos = [], slideIndex = 0, relogioTimer, barraTimer;
 
-		var tempopp = [];
-		var slideIndex = 0;
-		var min, seg;
-
-		function relogio() {
-			var data = new Date();
-			seg = 60 - data.getSeconds();
-			min = data.getMinutes() > 30 ? 60 - data.getMinutes() : 30 - data.getMinutes();
-
-			function atualizar() {
-				if (min > 0 || seg > 0) {
-					if (seg === 0) {
-						seg = 59;
-						min--;
-					} else {
-						seg--;
-					}
-
-					var minStr = min < 10 ? "0" + min : min;
-					var segStr = seg < 10 ? "0" + seg : seg;
-					document.getElementById('spanRelogio').innerHTML = "Próxima Atualização em: " + minStr + ":" + segStr;
-					setTimeout(atualizar, 1000);
-				} else {
-					document.getElementById('spanRelogio').innerHTML = "00:00";
-					location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
-					// location.reload();
-				}
-			}
-
-			atualizar();
+		function criarElemento(tag, src) {
+			const el = document.createElement(tag);
+			el.src = src;
+			// el.className = "mySlides";
+			el.style.zIndex = 1;
+			if (tag === "img") el.onerror = () => el.style.zIndex = 1;
+			galeria.appendChild(el);
+			return el;
 		}
 
-		function iniciarContagem(duracao) {
-			var barra = document.getElementById("barra");
-			var tempoRestante = duracao;
-			var intervalo = 50;
-			var larguraInicial = 100;
-
-			clearInterval(barra.timer);
-			barra.style.width = "100%";
-
-			barra.timer = setInterval(function () {
-				tempoRestante -= intervalo;
-				var progresso = Math.max(0, 1 - tempoRestante / duracao);
-				barra.style.width = (progresso * larguraInicial) + "%";
-				if (tempoRestante <= 0) {
-					clearInterval(barra.timer);
-					barra.style.width = "0%";
-				}
-			}, intervalo);
-		}
-
-		function LoadImg() {
-			const urlJSON = "https://intcicopal.github.io/diadia/diadia.json";
-			fetch(urlJSON)
-				.then(response => {
-					if (!response.ok) throw new Error(`HTTP status ${response.status}`);
-					return response.json();
-				})
-				.then(data => {
-					const galeria = document.getElementById("galeria");
-					galeria.innerHTML = "";
-					tempopp = [];
-					slideIndex = 0;
-					var indexTT = 0;
-					var slidesExist = false;
-
-					// Processar imagens
-					if (data.imagens && Array.isArray(data.imagens)) {
-						data.imagens.forEach(function (item) {
-							const img = document.createElement('img');
-							img.className = "mySlides";
-							img.src = `https://intcicopal.github.io/diadia/src/${item.nome}`;
-							img.onerror = function () {
-								console.error("Falha ao carregar imagem:", img.src);
-								this.style.display = "none";
-							};
-							galeria.appendChild(img);
-							tempopp[indexTT++] = item.tempo * 1000;
-							slidesExist = true;
-						});
-					}
-
-					// Processar links (exemplo: Power BI embed)
-					if (data.links && Array.isArray(data.links)) {
-						data.links.forEach(function (item) {
-							const iframe = document.createElement('iframe');
-							iframe.className = "mySlides";
-							iframe.allowFullscreen = true;
-							// iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false&filterPaneEnabled=false&actionBarEnabled=false`;
-							iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false`;
-							// iframe.src = `https://app.powerbi.com/view?r=eyJrIjoiMjU0YjM4M2MtMjBkOC00NTg4LWJlOTMtNjY3MWYzYjQwZWFmIiwidCI6IjcyMzdlMjRmLTVjNTctNDQ0NC1hNzJiLTgwY2E0NGM1ODYzMCJ9&pageName=${item.pageName}`;
-							// iframe.src = `https://app.powerbi.com/view?r=eyJrIjoiMjU0YjM4M2MtMjBkOC00NTg4LWJlOTMtNjY3MWYzYjQwZWFmIiwidCI6IjcyMzdlMjRmLTVjNTctNDQ0NC1hNzJiLTgwY2E0NGM1ODYzMCJ9&pageName=${item.pageName}&navContentPaneEnabled=true&filterPaneEnabled=true&actionBarEnabled=true`
-							galeria.appendChild(iframe);
-							tempopp[indexTT++] = item.tempo * 1000;
-							slidesExist = true;
-						});
-					}
-
-					if (slidesExist) {
-						showSlides();
-					} else {
-						galeria.innerHTML = "<span style='color:white'>Nenhum slide encontrado no JSON.</span>";
-					}
-				})
-				.catch(error => {
-					console.error('Erro ao carregar JSON:', error);
-					document.getElementById("status").innerHTML = "Erro ao carregar dados. Tentando novamente...";
-					setTimeout(() => {
-						// location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
-						location.reload();
-					}, 5000);
-				});
-		}
-
-		function showSlides() {
-			var slides = document.getElementsByClassName("mySlides");
-
-			if (slides.length === 0) {
-				console.warn("Nenhum slide para exibir.");
-				return;
-			}
-
-			for (var i = 0; i < slides.length; i++) {
-				slides[i].style.display = "none";
-			}
-
-			if (slideIndex >= slides.length) {
+		function carregarSlides(data) {
+			galeria.innerHTML = "";
+			slides = [];
+			tempos = [];
+			let idx = 0;
+			if (data.imagens) data.imagens.forEach(item => {
+				slides.push(criarElemento("img", `https://intcicopal.github.io/diadia/src/${item.nome}`));
+				tempos[idx++] = (item.tempo || 5) * 1000;
+			});
+			if (data.links) data.links.forEach(item => {
+				const src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false&filterPaneEnabled=false&actionBarEnabled=false`;
+				slides.push(criarElemento("iframe", src));
+				tempos[idx++] = (item.tempo || 10) * 1000;
+			});
+			if (slides.length > 0) {
 				slideIndex = 0;
-			}
-
-			slides[slideIndex].style.display = "block";
-			iniciarContagem(tempopp[slideIndex]);
-
-			setTimeout(showSlides, tempopp[slideIndex]);
-			slideIndex++;
+				mostrarSlide();
+				document.getElementById("status").style.display = "none";
+			} else galeria.innerHTML = "<span style='color:white'>Nenhum slide encontrado no JSON.</span>";
 		}
 
-		LoadImg();
-		relogio();
+		function mostrarSlide() {
+			slides.forEach((s, i) => s.style.zIndex = 1);
+			slides[slideIndex].style.zIndex = 9998;
+			iniciarBarra(tempos[slideIndex]);
+			slideIndex = (slideIndex + 1) % slides.length;
+			setTimeout(mostrarSlide, tempos[slideIndex]);
+		}
+
+		let barraAnimFrame;
+
+		function iniciarBarra(duracao) {
+			const barra = document.getElementById("barra");
+			barra.style.animation = "none"; // reset
+			barra.offsetHeight; // força reflow
+			barra.style.animation = `barraAnim ${duracao / 1000}s linear forwards`;
+		}
+
+		function atualizarRelogio() {
+			const agora = new Date();
+			let min = agora.getMinutes() > 30 ? 60 - agora.getMinutes() : 30 - agora.getMinutes();
+			let seg = 60 - agora.getSeconds();
+			document.getElementById("spanRelogio").textContent =
+				`Próxima Atualização em: ${min.toString().padStart(2, '0')}:${seg.toString().padStart(2, '0')}`;
+			relogioTimer = setTimeout(atualizarRelogio, 1000);
+		}
+
+		// Inicialização
+		fetch(urlJSON)
+			.then(r => r.ok ? r.json() : Promise.reject(r.status))
+			.then(data => carregarSlides(data))
+			.catch(err => {
+				console.error("Erro JSON:", err);
+				document.getElementById("status").textContent = "Erro ao carregar dados. Tentando novamente...";
+				setTimeout(() => location.reload(), 5000);
+			});
+
+		atualizarRelogio();
 	</script>
 
 </body>
