--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		}
 
 		.mySlides {
-			display: none;
+			display: block;
 		}
 
-		#galeria {
+		#galerias {
 			position: relative;
 			width: 100vw;
 			height: 100vh;
@@ -47,6 +47,7 @@
 
 		#barra-contagem {
 			position: fixed;
+			/* --duration: 5s; */
 			top: 0;
 			left: 0;
 			width: 100%;
@@ -60,6 +61,19 @@
 			height: 100%;
 			width: 100%;
 			background-color: #4caf50;
+			animation: fill var(--duration) linear infinite;
+		}
+
+		@keyframes fill {
+			0% {
+				width: 0%;
+			}
+
+			100% {
+				width: 100%;
+			}
+
+			/* ao chegar aqui, reinicia do 0 */
 		}
 
 		#spanRelogio {
@@ -71,7 +85,7 @@
 			color: white;
 			font-size: 14px;
 			border-radius: 4px;
-			z-index: 9999;
+			z-index: 99999;
 		}
 
 		#status {
@@ -89,7 +103,7 @@
 
 <body>
 
-	<span id="spanRelogio"></span>
+	<span id="spanRelogio">Próxima Atualização em: </span>
 	<div id="galeria">
 		<div id="status">Carregando slides...</div>
 	</div>
@@ -97,63 +111,8 @@
 		<div id="barra"></div>
 	</div>
 
+
 	<script>
-		window.onblur = function () {
-			window.onfocus = function () {
-				location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
-			}
-		};
-
-		var tempopp = [];
-		var slideIndex = 0;
-		var min, seg;
-
-		function relogio() {
-			var data = new Date();
-			seg = 60 - data.getSeconds();
-			min = data.getMinutes() > 30 ? 60 - data.getMinutes() : 30 - data.getMinutes();
-
-			function atualizar() {
-				if (min > 0 || seg > 0) {
-					if (seg === 0) {
-						seg = 59;
-						min--;
-					} else {
-						seg--;
-					}
-
-					var minStr = min < 10 ? "0" + min : min;
-					var segStr = seg < 10 ? "0" + seg : seg;
-					document.getElementById('spanRelogio').innerHTML = "Próxima Atualização em: " + minStr + ":" + segStr;
-					setTimeout(atualizar, 1000);
-				} else {
-					document.getElementById('spanRelogio').innerHTML = "00:00";
-					location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
-				}
-			}
-
-			atualizar();
-		}
-
-		function iniciarContagem(duracao) {
-			var barra = document.getElementById("barra");
-			var tempoRestante = duracao;
-			var intervalo = 50;
-			var larguraInicial = 100;
-
-			clearInterval(barra.timer);
-			barra.style.width = "100%";
-
-			barra.timer = setInterval(function () {
-				tempoRestante -= intervalo;
-				var progresso = Math.max(0, 1 - tempoRestante / duracao);
-				barra.style.width = (progresso * larguraInicial) + "%";
-				if (tempoRestante <= 0) {
-					clearInterval(barra.timer);
-					barra.style.width = "0%";
-				}
-			}, intervalo);
-		}
 
 		function LoadImg() {
 			const urlJSON = "https://intcicopal.github.io/diadia/diadia.json";
@@ -193,6 +152,7 @@
 							iframe.className = "mySlides";
 							iframe.allowFullscreen = true;
 							iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false&filterPaneEnabled=false&actionBarEnabled=false`;
+							// iframe.src = https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false;
 							galeria.appendChild(iframe);
 							tempopp[indexTT++] = item.tempo * 1000;
 							slidesExist = true;
@@ -209,7 +169,8 @@
 					console.error('Erro ao carregar JSON:', error);
 					document.getElementById("status").innerHTML = "Erro ao carregar dados. Tentando novamente...";
 					setTimeout(() => {
-						location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+						// location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+						location.reload();
 					}, 5000);
 				});
 		}
@@ -223,22 +184,54 @@
 			}
 
 			for (var i = 0; i < slides.length; i++) {
-				slides[i].style.display = "none";
+				slides[i].style.zIndex = 1
 			}
 
 			if (slideIndex >= slides.length) {
 				slideIndex = 0;
 			}
 
-			slides[slideIndex].style.display = "block";
-			iniciarContagem(tempopp[slideIndex]);
+			slides[slideIndex].style.zIndex = 9999;
+			document.querySelector("#barra-contagem").style.setProperty("--duration", tempopp[slideIndex] / 1000 + "s");
 
 			setTimeout(showSlides, tempopp[slideIndex]);
 			slideIndex++;
 		}
 
-		LoadImg();
-		relogio();
+		function syncCountdown() {
+			const el = document.getElementById("spanRelogio");
+
+			const now = new Date();
+			const min = now.getMinutes();
+
+			// próximo múltiplo de 15 (00, 15, 30, 45)
+			const next = new Date(now);
+			next.setMinutes(Math.ceil((min + 1) / 15) * 15, 0, 0);
+
+			// agenda reload único
+			setTimeout(() => {
+				location.href = location.pathname + "?nocache=" + Date.now();
+			}, next - now);
+
+			function updateClock() {
+				const diffSec = Math.floor((next - new Date()) / 1000);
+
+				if (diffSec <= 0) return; // já vai recarregar
+
+				const mm = String(Math.floor(diffSec / 60)).padStart(2, "0");
+				const ss = String(diffSec % 60).padStart(2, "0");
+				el.textContent = `Próxima Atualização em: ${mm}:${ss}`;
+
+				// sincroniza para disparar exatamente no próximo segundo
+				const delay = 1000 - (Date.now() % 1000);
+				setTimeout(updateClock, delay);
+			}
+
+			updateClock();
+		}
+
+		LoadImg()
+		syncCountdown();
 	</script>
 
 </body>
