--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 			display: block;
 		}
 
+		.mySlide.active {
+			opacity: 1;
+			z-index: 1;
+		}
+
 		#galerias {
 			position: relative;
 			width: 100vw;
@@ -62,18 +67,9 @@
 			width: 100%;
 			background-color: #4caf50;
 			animation: fill var(--duration) linear;
-		}
-
-		@keyframes fill {
-			0% {
-				width: 0%;
-			}
-
-			100% {
-				width: 100%;
-			}
-
-			/* ao chegar aqui, reinicia do 0 */
+			transform-origin: left;
+			transform: scaleX(0);
+			transition: transform linear;
 		}
 
 		#spanRelogio {
@@ -192,7 +188,13 @@
 			}
 
 			slides[slideIndex].style.zIndex = 9999;
-			document.querySelector("#barra-contagem").style.setProperty("--duration", tempopp[slideIndex] + "ms");
+			document.getElementById('barra').style.transition = 'none';
+			document.getElementById('barra').style.transform = 'scaleX(0)';
+			// Força reflow para reiniciar animação
+			void document.getElementById('barra').offsetWidth;
+			document.getElementById('barra').style.transition = `transform ${tempopp[slideIndex]}ms linear`;
+			document.getElementById('barra').style.transform = 'scaleX(1)';
+
 
 			setTimeout(showSlides, tempopp[slideIndex]);
 			slideIndex++;
@@ -213,21 +215,21 @@
 				location.href = location.pathname + "?nocache=" + Date.now();
 			}, next - now);
 
-			function updateClock() {
-				const diffSec = Math.floor((next - new Date()) / 1000);
+			// function updateClock() {
+			// 	const diffSec = Math.floor((next - new Date()) / 1000);
 
-				if (diffSec <= 0) return; // já vai recarregar
+			// 	if (diffSec <= 0) return; // já vai recarregar
 
-				const mm = String(Math.floor(diffSec / 60)).padStart(2, "0");
-				const ss = String(diffSec % 60).padStart(2, "0");
-				el.textContent = `Próxima Atualização em: ${mm}:${ss}`;
+			// 	const mm = String(Math.floor(diffSec / 60)).padStart(2, "0");
+			// 	const ss = String(diffSec % 60).padStart(2, "0");
+			el.textContent = `Próxima Atualização em: ${next.toLocaleString('pt-PT', { hour: '2-digit', minute: '2-digit' })}`;
 
-				// sincroniza para disparar exatamente no próximo segundo
-				const delay = 1000 - (Date.now() % 1000);
-				setTimeout(updateClock, delay);
-			}
+			// 	// sincroniza para disparar exatamente no próximo segundo
+			// 	const delay = 1000 - (Date.now() % 1000);
+			// 	setTimeout(updateClock, delay);
+			// }
 
-			updateClock();
+			// updateClock();
 		}
 
 		LoadImg()
