--- a/index.html
+++ b/index.html
@@ -21,15 +21,10 @@
 		}
 
 		.mySlides {
-			display: block;
+			display: none;
 		}
 
-		.mySlide.active {
-			opacity: 1;
-			z-index: 1;
-		}
-
-		#galerias {
+		#galeria {
 			position: relative;
 			width: 100vw;
 			height: 100vh;
@@ -52,7 +47,6 @@
 
 		#barra-contagem {
 			position: fixed;
-			/* --duration: 5s; */
 			top: 0;
 			left: 0;
 			width: 100%;
@@ -66,10 +60,6 @@
 			height: 100%;
 			width: 100%;
 			background-color: #4caf50;
-			animation: fill var(--duration) linear;
-			transform-origin: left;
-			transform: scaleX(0);
-			transition: transform linear;
 		}
 
 		#spanRelogio {
@@ -81,7 +71,7 @@
 			color: white;
 			font-size: 14px;
 			border-radius: 4px;
-			z-index: 99999;
+			z-index: 9999;
 		}
 
 		#status {
@@ -99,7 +89,7 @@
 
 <body>
 
-	<span id="spanRelogio">Próxima Atualização em: </span>
+	<span id="spanRelogio"></span>
 	<div id="galeria">
 		<div id="status">Carregando slides...</div>
 	</div>
@@ -107,8 +97,64 @@
 		<div id="barra"></div>
 	</div>
 
-
 	<script>
+		// window.onblur = function () {
+		// 	window.onfocus = function () {
+		// 		location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+		// 	}
+		// };
+
+		var tempopp = [];
+		var slideIndex = 0;
+		var min, seg;
+
+		function relogio() {
+			var data = new Date();
+			seg = 60 - data.getSeconds();
+			min = data.getMinutes() > 30 ? 60 - data.getMinutes() : 30 - data.getMinutes();
+
+			function atualizar() {
+				if (min > 0 || seg > 0) {
+					if (seg === 0) {
+						seg = 59;
+						min--;
+					} else {
+						seg--;
+					}
+
+					var minStr = min < 10 ? "0" + min : min;
+					var segStr = seg < 10 ? "0" + seg : seg;
+					document.getElementById('spanRelogio').innerHTML = "Próxima Atualização em: " + minStr + ":" + segStr;
+					setTimeout(atualizar, 1000);
+				} else {
+					document.getElementById('spanRelogio').innerHTML = "00:00";
+					location.href = location.href.split('?')[0] + '?nocache=' + new Date().getTime();
+					// location.reload();
+				}
+			}
+
+			atualizar();
+		}
+
+		function iniciarContagem(duracao) {
+			var barra = document.getElementById("barra");
+			var tempoRestante = duracao;
+			var intervalo = 50;
+			var larguraInicial = 100;
+
+			clearInterval(barra.timer);
+			barra.style.width = "100%";
+
+			barra.timer = setInterval(function () {
+				tempoRestante -= intervalo;
+				var progresso = Math.max(0, 1 - tempoRestante / duracao);
+				barra.style.width = (progresso * larguraInicial) + "%";
+				if (tempoRestante <= 0) {
+					clearInterval(barra.timer);
+					barra.style.width = "0%";
+				}
+			}, intervalo);
+		}
 
 		function LoadImg() {
 			const urlJSON = "https://intcicopal.github.io/diadia/diadia.json";
@@ -147,8 +193,10 @@
 							const iframe = document.createElement('iframe');
 							iframe.className = "mySlides";
 							iframe.allowFullscreen = true;
-							iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false&filterPaneEnabled=false&actionBarEnabled=false`;
-							// iframe.src = https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false;
+							// iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false&filterPaneEnabled=false&actionBarEnabled=false`;
+							iframe.src = `https://app.powerbi.com/reportEmbed?reportId=${item.reportId}&autoAuth=true&ctid=${item.ctid}&pageName=${item.pageName}&navContentPaneEnabled=false`;
+							// iframe.src = `https://app.powerbi.com/view?r=eyJrIjoiMjU0YjM4M2MtMjBkOC00NTg4LWJlOTMtNjY3MWYzYjQwZWFmIiwidCI6IjcyMzdlMjRmLTVjNTctNDQ0NC1hNzJiLTgwY2E0NGM1ODYzMCJ9&pageName=${item.pageName}`;
+							// iframe.src = `https://app.powerbi.com/view?r=eyJrIjoiMjU0YjM4M2MtMjBkOC00NTg4LWJlOTMtNjY3MWYzYjQwZWFmIiwidCI6IjcyMzdlMjRmLTVjNTctNDQ0NC1hNzJiLTgwY2E0NGM1ODYzMCJ9&pageName=${item.pageName}&navContentPaneEnabled=true&filterPaneEnabled=true&actionBarEnabled=true`
 							galeria.appendChild(iframe);
 							tempopp[indexTT++] = item.tempo * 1000;
 							slidesExist = true;
@@ -180,60 +228,22 @@
 			}
 
 			for (var i = 0; i < slides.length; i++) {
-				slides[i].style.zIndex = 1
+				slides[i].style.display = "none";
 			}
 
 			if (slideIndex >= slides.length) {
 				slideIndex = 0;
 			}
 
-			slides[slideIndex].style.zIndex = 9999;
-			document.getElementById('barra').style.transition = 'none';
-			document.getElementById('barra').style.transform = 'scaleX(0)';
-			// Força reflow para reiniciar animação
-			void document.getElementById('barra').offsetWidth;
-			document.getElementById('barra').style.transition = `transform ${tempopp[slideIndex]}ms linear`;
-			document.getElementById('barra').style.transform = 'scaleX(1)';
-
+			slides[slideIndex].style.display = "block";
+			iniciarContagem(tempopp[slideIndex]);
 
 			setTimeout(showSlides, tempopp[slideIndex]);
 			slideIndex++;
 		}
 
-		function syncCountdown() {
-			const el = document.getElementById("spanRelogio");
-
-			const now = new Date();
-			const min = now.getMinutes();
-
-			// próximo múltiplo de 15 (00, 15, 30, 45)
-			const next = new Date(now);
-			next.setMinutes(Math.ceil((min + 1) / 30) * 30, 0, 0);
-
-			// agenda reload único
-			setTimeout(() => {
-				location.href = location.pathname + "?nocache=" + Date.now();
-			}, next - now);
-
-			// function updateClock() {
-			// 	const diffSec = Math.floor((next - new Date()) / 1000);
-
-			// 	if (diffSec <= 0) return; // já vai recarregar
-
-			// 	const mm = String(Math.floor(diffSec / 60)).padStart(2, "0");
-			// 	const ss = String(diffSec % 60).padStart(2, "0");
-			el.textContent = `Próxima Atualização em: ${next.toLocaleString('pt-PT', { hour: '2-digit', minute: '2-digit' })}`;
-
-			// 	// sincroniza para disparar exatamente no próximo segundo
-			// 	const delay = 1000 - (Date.now() % 1000);
-			// 	setTimeout(updateClock, delay);
-			// }
-
-			// updateClock();
-		}
-
-		LoadImg()
-		syncCountdown();
+		LoadImg();
+		relogio();
 	</script>
 
 </body>
